--- a/composer.json
+++ b/composer.json
@@ -21,7 +21,8 @@
         "2amigos/yii2-date-picker-widget" : "~1.0",
         "yiisoft/yii2-jui": "~2.0.0",
         "2amigos/yii2-date-time-picker-widget" : "~1.0",
-        "2amigos/yii2-gallery-widget": "~1.0"
+        "2amigos/yii2-gallery-widget": "~1.0",
+        "2amigos/yii2-ckeditor-widget" : "~1.0"
     },
     "require-dev": {
         "yiisoft/yii2-codeception": "*",
