--- a/composer.json
+++ b/composer.json
@@ -22,7 +22,8 @@
         "yiisoft/yii2-jui": "~2.0.0",
         "2amigos/yii2-date-time-picker-widget" : "~1.0",
         "2amigos/yii2-gallery-widget": "~1.0",
-        "2amigos/yii2-ckeditor-widget" : "~1.0"
+        "2amigos/yii2-ckeditor-widget" : "~1.0",
+        "kartik-v/yii2-widget-datepicker": "@dev"
     },
     "require-dev": {
         "yiisoft/yii2-codeception": "*",
